Fixed the timing of the jumpTo backwards function.

--- a/styles.css
+++ b/styles.css
@@ -270,7 +270,7 @@ button {
 }
 
 .bottom-cover {
-    width: 27em;
+    width: 27.5em;
     height: 32em;
     background-color: var(--clr-accent);
     position: absolute;
